--- a/employee-grievance-dashboard/package.json
+++ b/employee-grievance-dashboard/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
